--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -9,6 +9,12 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+bootWar{
+	archivesBaseName = "ROOT"
+	archiveFileName="ROOT.war"
+	archiveVersion="0.0.0"
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -25,7 +31,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+//	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
